SP - fix issue of flight cards getting cut off when animating off screen

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
   float: right;
   bottom: 100px;
   right: 0;
+  overflow: visible;
 }
 
 .browserupgrade {
